# ocelescope-module-ocelot

./: README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: publish-npm.yml
app/: next.config.ts  ocelescope.config.ts  package.json  tsconfig.json
app/pages/: _app.tsx
backend-modules/ocelescope_module_ocelot/: README.md  pyproject.toml
backend-modules/ocelescope_module_ocelot/src/ocelescope_module_ocelot/: models.py  module.py  routes.py  util.py
data/: event_logs.json
frontend-modules/ocelot/: .gitignore  README.md  orval.config.ts  package.json  tsconfig.json  tsdown.config.ts
frontend-modules/ocelot/src/: config.ts  index.ts  styles.css
frontend-modules/ocelot/src/components/: EntityCard.tsx  EntityOverview.tsx  EntityPage.tsx  EntityTable.tsx  OcelotIcon.tsx
frontend-modules/ocelot/src/components/Graph/: index.tsx
frontend-modules/ocelot/src/components/Graph/edges/: BaseEdge.tsx  FloatingEdge.tsx  LoopEdge.tsx
frontend-modules/ocelot/src/components/Graph/layout/: dagre.ts  elk.ts
frontend-modules/ocelot/src/components/Graph/nodes/: CircleNode.tsx  RectangleNode.tsx
frontend-modules/ocelot/src/components/Graph/util/: getEdgeParams.tsx
frontend-modules/ocelot/src/components/SingleLineTabs/: SingleLineTabs.tsx
frontend-modules/ocelot/src/routes/: eventOverview.tsx  events.tsx  objectOverview.tsx  objects.tsx
frontend-modules/ocelot/src/util/: dayjs.ts
