[project]
name = "ocelescope-module-ocelot"
version = "0.1.0"
description = "An ocelescope module for giving paginated exploration in ocelescope"
requires-python = ">=3.11"
dependencies = ["ocelescope-backend>=0.1.1"]

[project.entry-points."ocelescope_backend.modules"]
ocelot = "ocelescope_module_ocelot.module:Ocelot"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
